--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "fantasy"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
@@ -16,6 +16,10 @@ multilingual: true
 
 <!-- Chinese Version -->
 <div class="zh post-container">
+
+    
     Hey,this is fantasy.
+
+
 </div>
 
